--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
 
 main {
     flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 footer {
@@ -44,4 +48,48 @@ header {
     justify-content: center;
     align-content: center;
     padding: 4rem ;
+    background-color: #e5e7eb;
+}
+
+#rps-button-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.playerChoice.btn {
+    min-width: 8rem;
+    padding: 4rem;
+    margin: 2rem 1rem;
+    flex: 1;
+}
+
+.promptingText {
+    height: 1rem;
+    margin: 2rem;
+}
+
+#scoreBoard {
+    border: 1px solid black;
+    padding: 1rem;
+    display: flex;
+}
+
+.playerScoreBoard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    min-width: 8rem;
+    /* flex: 1 1 auto; */
+}
+
+
+#scoreBoard div .label {
+    /* margin-bottom: 1rem 1rem; */
+    text-align: center;
+}
+
+.score {
+    font-size: 5rem;
 }
