--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ header {
     display: flex;
     justify-content: center;
     align-content: center;
+    text-align: center;
     padding: 4rem ;
     background-color: #e5e7eb;
 }
